@@ -1,3 +1,8 @@
+2009-12-20  Robert Millan  <rmh.grub@aybabtu.com>
+
+	* commands/loadenv.c (check_blocklists): Use `grub_err_t' as
+	return value (and revert all return statements).  Update users.
+
 2010-01-20  Dan Merillat  <debian@dan.merillat.org>
 
 	* kern/device.c (grub_device_iterate): Allocate new part_ent
